tests/ui/traits/next-solver/assembly/ambiguity-due-to-uniquification-4.current.stderr
error[E0284]: type annotations needed
  --> $DIR/ambiguity-due-to-uniquification-4.rs:17:47
   |
LL | pub fn f<'a, 'b, T: Trait<'a> + Trait<'b>>(v: <T as Trait<'a>>::Type) {}
   |                                               ^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
   |
   = note: cannot satisfy `<T as Trait<'a>>::Type == _`

error[E0284]: type annotations needed
  --> $DIR/ambiguity-due-to-uniquification-4.rs:17:47
   |
LL | pub fn f<'a, 'b, T: Trait<'a> + Trait<'b>>(v: <T as Trait<'a>>::Type) {}
   |                                               ^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
   |
   = note: cannot satisfy `<T as Trait<'a>>::Type == _`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0284`.
